fixed collapsing navbar

--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,9 @@
 
 .header-div {
   text-align: center;
-  margin: auto;
-  height: auto;
-  position: relative;
+  width: 100vw;
+  height: 100vh;
   color: white;
-  margin: 10px;
   display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
@@ -28,36 +26,54 @@
 	align-content: center;
 }
 
+#header {
+  font-size: 100px;
+}
+
 .nav-bar {
+  font-size: 20px;
   z-index: 2;
   position: relative;
-  background-color: lightblue;
+  background-color: white;
   height: 70px;
 }
 
-.span {
-  color: black;
-}
 
-@media (min-width: 480px) {
+@media (min-width: 200px) and (max-width: 779px) {
+  #nav-menu, .nav-span {
+    display: none;
+  }
 
-}
+  .mobile-nav {
+    background-color: white;
+  }
 
-@media (min-width: 780px) {
-
-}
-
-@media (min-width: 1090px) {
-  .back {
+  .btn:hover {
     
   }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 780px) {
+
+  span {
+    padding: 20px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .nav-bar {
+    background-color: transparent;
+  }
+
+ #nav-btn {
+    display: none;
+  }
+
+  #nav-menu {
+    display: initial;
+  }
+
+  .mobile-nav {
+    display: none;
   }
 }
+
+
